Updating references to files to include GH Pages dir

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -12,7 +12,7 @@ custom_js:
 <div class="row">
   <h1 class="tagline">The GenitoUrinary Development Molecular Anatomy Project (GUDMAP) provides data and tools<br/> that facilitate research on the GenitoUrinary (GU) tract for the scientific and medical community.</h1>
   <!--
-  <p class="hotlinks"><a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">Learn How to Query Data</a> | <a href="/tutorials/">Explore Tutorials</a> | <a href="/resources/">Find Resources</a></p>
+  <p class="hotlinks"><a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">Learn How to Query Data</a> | <a href="{{ "/tutorials/" | relative_url }}">Explore Tutorials</a> | <a href="{{ "/resources/" | relative_url }}">Find Resources</a></p>
 -->
   <div class="col-sm-12 col-md-12 gud-cards">
 
@@ -21,15 +21,15 @@ custom_js:
             <div class="panel-body">
               <h3><a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">How to Query Data</a></h3>
             <a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">
-<img class="media-object" src="/assets/img/query-example.png" alt=""></a>
+<img class="media-object" src="{{ "/assets/img/query-example.png" | relative_url }}" alt=""></a>
             </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-3">
           <div class="panel panel-default">
             <div class="panel-body">
-              <h3><a href="/tutorials/">Tutorials</a></h3>
-              <a href="/tutorials/"><img class="media-object" src="/assets/img/tutorials/TS21_WMISH_Mventral_crop.jpg" alt="urogenital system at approximately TS21" height="150"></a>
+              <h3><a href="{{ "/tutorials/" | relative_url }}">Tutorials</a></h3>
+              <a href="{{ "/tutorials/" | relative_url }}"><img class="media-object" src="{{ "/assets/img/tutorials/TS21_WMISH_Mventral_crop.jpg" | relative_url }}" alt="urogenital system at approximately TS21" height="150"></a>
 
             </div>
           </div>
@@ -37,18 +37,18 @@ custom_js:
         <div class="col-sm-12 col-md-3">
           <div class="panel panel-default">
             <div class="panel-body">
-              <h3><a href="/gudmap/citing-gudmap/">How to Cite GUDMAP Data</a></h3>
-            <a href="/gudmap/citing-gudmap/">
-              <img class="media-object" src="/assets/img/citing-thumb.png" alt="Quotation mark to indicate a citation"></a>
+              <h3><a href="{{ "/gudmap/citing-gudmap/" | relative_url }}">How to Cite GUDMAP Data</a></h3>
+            <a href="{{ "/gudmap/citing-gudmap/" | relative_url }}">
+              <img class="media-object" src="{{ "/assets/img/citing-thumb.png" | relative_url }}" alt="Quotation mark to indicate a citation"></a>
             </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-3">
           <div class="panel panel-default">
             <div class="panel-body">
-              <h3><a href="/resources/">Resources</a></h3>
-              <a href="/resources/">
-                <img class="media-object" src="/assets/img/MC_OPT_030512_32_large_1.png" alt=""></a>
+              <h3><a href="{{ "/resources/" | relative_url }}">Resources</a></h3>
+              <a href="{{ "/resources/" | relative_url }}">
+                <img class="media-object" src="{{ "/assets/img/MC_OPT_030512_32_large_1.png" | relative_url }}" alt=""></a>
             </div>
           </div>
         </div>
@@ -66,7 +66,7 @@ custom_js:
       <li>access to consortium generated data, unpublished and  published, via the ATLAS-D2K data repository.</li>
     </ul>
 
-    <p class="indent">The goal of the <a href="/gudmap/projects/">latest phase of GUDMAP (GUDMAP 4)</a> is to establish a comprehensive understanding of kidney and lower urinary tract development and maturation to inform the study of tissue maturation and aging, organ dysgenesis and disease, and ultimately organ repair and regeneration.  </p>
+    <p class="indent">The goal of the <a href="{{ "/gudmap/projects/" | relative_url }}">latest phase of GUDMAP (GUDMAP 4)</a> is to establish a comprehensive understanding of kidney and lower urinary tract development and maturation to inform the study of tissue maturation and aging, organ dysgenesis and disease, and ultimately organ repair and regeneration.  </p>
 
     <p class="indent">The GUDMAP tools, tutorials and database are a public resource funded by the <a href="https://www.nih.gov/">National Institutes of Health, USA</a>.</p>
 </div>
@@ -85,48 +85,48 @@ custom_js:
   <div class="row bottom">
 
     <div class="col-md-4">
-      <h3>Featured Tutorials <small><em><a href="/tutorials/">View all</a></em></small></h3>
+      <h3>Featured Tutorials <small><em><a href="{{ "/tutorials/" | relative_url }}">View all</a></em></small></h3>
 
       <div class="media">
         <div class="media-left">
-          <a href="/tutorials/innervation/">
-            <img class="media-object" src="/assets/img/tutorials/Fig5C_Alice Illustrations_PG_v4.png" alt="Illustration of pelvic ganglia and nerves">
+          <a href="{{ "/tutorials/innervation/" | relative_url }}">
+            <img class="media-object" src="{{ "/assets/img/tutorials/Fig5C_Alice Illustrations_PG_v4.png" | relative_url }}" alt="Illustration of pelvic ganglia and nerves">
           </a>
         </div>
         <div class="media-body">
-          <h4 class="media-heading"><a href="/tutorials/innervation/">Lower Urinary Tract Innervation and its Development</a> <sup><em>New</em></sup></h4>
+          <h4 class="media-heading"><a href="{{ "/tutorials/innervation/" | relative_url }}">Lower Urinary Tract Innervation and its Development</a> <sup><em>New</em></sup></h4>
         </div>
       </div>
 
       <div class="media">
         <div class="media-left">
-          <a href="/tutorials/urogenital-dev/">
-            <img class="media-object" src="/assets/img/tutorials/TS21_WMISH_Mventral_crop-thumb.jpg" alt="urogenital system at approximately TS21">
+          <a href="{{ "/tutorials/urogenital-dev/" | relative_url }}">
+            <img class="media-object" src="{{ "/assets/img/tutorials/TS21_WMISH_Mventral_crop-thumb.jpg" | relative_url }}" alt="urogenital system at approximately TS21">
           </a>
         </div>
         <div class="media-body">
-          <h4 class="media-heading"><a href="/tutorials/urogenital-dev/">Urogenital System Development</a></h4>
+          <h4 class="media-heading"><a href="{{ "/tutorials/urogenital-dev/" | relative_url }}">Urogenital System Development</a></h4>
         </div>
       </div>
       <div class="media">
       <div class="media-left">
-        <a href="/tutorials/kidney-dev/">
-          <img class="media-object" src="/assets/img/tutorials/mouse-vs-human-kidneyx895-thumb.jpg" alt="Mouse vs human kidney illustration">
+        <a href="{{ "/tutorials/kidney-dev/" | relative_url }}">
+          <img class="media-object" src="{{ "/assets/img/tutorials/mouse-vs-human-kidneyx895-thumb.jpg" | relative_url }}" alt="Mouse vs human kidney illustration">
         </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/tutorials/kidney-dev/">Development of the Kidney in Mouse and Human</a></h4>
+        <h4 class="media-heading"><a href="{{ "/tutorials/kidney-dev/" | relative_url }}">Development of the Kidney in Mouse and Human</a></h4>
       </div>
     </div>
     <!--
     <div class="media">
       <div class="media-left">
-        <a href="/tutorials/prostate-dev/">
-          <img class="media-object" src="/assets/img/tutorials/16dpc-UGS-wholemount-thumb.jpg" alt=" the UGS and other components of a 16 dpc (days post conception) male mouse lower urinary tract.">
+        <a href="{{ "/tutorials/prostate-dev/" | relative_url }}">
+          <img class="media-object" src="{{ "/assets/img/tutorials/16dpc-UGS-wholemount-thumb.jpg" | relative_url }}" alt=" the UGS and other components of a 16 dpc (days post conception) male mouse lower urinary tract.">
         </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/tutorials/prostate-dev/">Prostate Development</a></h4>
+        <h4 class="media-heading"><a href="{{ "/tutorials/prostate-dev/" | relative_url }}">Prostate Development</a></h4>
       </div>
     </div>
   -->
@@ -139,7 +139,7 @@ custom_js:
         <li class="list-group-item"><a href="https://doi.org/10.1016/j.ydbio.2021.03.024">Altered sacral neural crest development in <em>Pax3</em> spina bifida mutants underlies deficits of bladder innervation and function</a> <small><em>(Dev Bio, August 2021)</em></small></li>
         <li class="list-group-item"><a href="https://doi.org/10.3390/ijms22136838">5-HT3 Signaling Alters Development of Sacral Neural Crest Derivatives That Innervate the Lower Urinary Tract</a> <small><em>(International Journal of Molecular Sciences, June 2021)</em></small></li>
       </ul>
-      <a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArADY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)">all publications ></a>
+      <a href="{{ "/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArADY16jUA@sort(Year::desc::,Month::desc::,RID::desc::)" | relative_url }}">all publications ></a>
 
     </div>
     <div class="col-md-4">
@@ -162,8 +162,8 @@ custom_js:
           {% endfor %}
       </ul>
 
-    <a id="more-news" href="/gudmap/news/">all news ></a><br>
-    <!--    <a href="/publications/">publications ></a> -->
+    <a id="more-news" href="{{ "/gudmap/news/" | relative_url }}">all news ></a><br>
+    <!--    <a href="{{ "/publications/" | relative_url }}">publications ></a> -->
     </div>
 
   </div>
