--- a/gudmap/projects/gudmap1/index.html
+++ b/gudmap/projects/gudmap1/index.html
@@ -7,17 +7,17 @@ title: GUDMAP1 Projects
 
 <p><em>Funding period: 2005 through 2011 (<a href="https://grants.nih.gov/grants/guide/pa-files/PAR-04-042.html">PAR-04-042</a>)<br>
 Main focus was the kidney, also minor focus on reproductive system, bladder, pelvic region and prostate.</em></p>
-<p>Project descriptions for <a href="/gudmap/projects/gudmap1/">GUDMAP 1:</a></p>
+<p>Project descriptions for <a href="{{ "/gudmap/projects/gudmap1/" | relative_url }}">GUDMAP 1:</a></p>
 <ul>
-<li><a href="/gudmap/projects/gudmap1/capel-group/">Blanche Capel</a></li>
-  <li><a href="/gudmap/projects/gudmap1/gaido-group/">Kevin Gaido</a></li>
-  <li><a href="/gudmap/projects/gudmap1/edinburgh-group/">Edinburgh Group (Editorial Office and Database Core)</a></li>
-  <li><a href="/gudmap/projects/gudmap1/lessard-group/">Jim Lessard</a></li>
-  <li><a href="/gudmap/projects/gudmap1/little-group/">Melissa Little</a></li>
-  <li><a href="/gudmap/projects/gudmap1/mcmahon-group/">Andy McMahon</a></li>
-  <li><a href="/gudmap/projects/gudmap1/mendelsohn-group/">Cathy Mendelsohn</a></li>
-  <li><a href="/gudmap/projects/gudmap1/potter-group/">Steve Potter </a></li>
-  <li><a href="/gudmap/projects/gudmap1/southard-smith-group/">Michelle Southard-Smith</a></li>
-  <li><a href="/gudmap/projects/gudmap1/vezina-group/">Chad Vezina</a></li>
-  <li><a href="/gudmap/projects/gudmap1/zhang-group/">Pumin Zhang </a></li>
+<li><a href="{{ "/gudmap/projects/gudmap1/capel-group/" | relative_url }}">Blanche Capel</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/gaido-group/" | relative_url }}">Kevin Gaido</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/edinburgh-group/" | relative_url }}">Edinburgh Group (Editorial Office and Database Core)</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/lessard-group/" | relative_url }}">Jim Lessard</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/little-group/" | relative_url }}">Melissa Little</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/mcmahon-group/" | relative_url }}">Andy McMahon</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/mendelsohn-group/" | relative_url }}">Cathy Mendelsohn</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/potter-group/" | relative_url }}">Steve Potter </a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/southard-smith-group/" | relative_url }}">Michelle Southard-Smith</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/vezina-group/" | relative_url }}">Chad Vezina</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/zhang-group/" | relative_url }}">Pumin Zhang </a></li>
 </ul>
