--- a/gudmap/projects/gudmap1/mcmahon-group/index.html
+++ b/gudmap/projects/gudmap1/mcmahon-group/index.html
@@ -10,4 +10,4 @@ title: Andy McMahon Group (GUDMAP1)
       <li>We will perform transcriptional array analysis of renal tubule deficient mouse kidneys and micro-dissected kidney tubules to identify, and subsequently map the expression of tubule specific genes.</li>
       <li>We will use BAC-mediated transgenics to express fluorescent reporter proteins and Cre recombinase in specific cell populations for cell marking, cell fate and genetic manipulation studies.</li>
     </ul>
-    <p><a href="/chaise/recordset/#2/Protocol:Protocol?facets=(Protocol:Authors::eq::Andrew%20McMahon;Andrew%20McMahon%3B%20Tracy%20Tran;Andrew%20McMahon%3B%20Nils%20Lindstrom;Andrew%20McMahon%3B%20Mia%20Krautzberger%3B%20Jin-Jin%20Guo;Andrew%20McMahon%3B%20Albert%20Kim%3B%20Riana%20Parvez)&layout=table&page=1&pcid=static">Protocols</a></p>
+    <p><a href="{{ "/chaise/recordset/#2/Protocol:Protocol?facets=(Protocol:Authors::eq::Andrew%20McMahon;Andrew%20McMahon%3B%20Tracy%20Tran;Andrew%20McMahon%3B%20Nils%20Lindstrom;Andrew%20McMahon%3B%20Mia%20Krautzberger%3B%20Jin-Jin%20Guo;Andrew%20McMahon%3B%20Albert%20Kim%3B%20Riana%20Parvez)&layout=table&page=1&pcid=static" | relative_url }}">Protocols</a></p>
