--- a/gudmap/projects/gudmap1/mendelsohn-group/index.html
+++ b/gudmap/projects/gudmap1/mendelsohn-group/index.html
@@ -4,4 +4,4 @@ title: Cathy Mendelsohn Group (GUDMAP1)
 ---
 
 <p>TBD</p>
-<p><a href="/chaise/recordset/#2/Protocol:Protocol/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEABQxQBcUsUAbEAGmtoaeYH0BBNHQAWKDLxr1GLXgDMA1jgCeIALoBfNqHR0yaCgk5Se7I9xmCRYgUNHiFytZpAAxNMz4A5MAFs8qjixRQlwkSgBhMBElAAIAWRxoHGZUYQgnDSA@sort(ID)?pcid=static">Protocols</a></p>
+<p><a href="{{ "/chaise/recordset/#2/Protocol:Protocol/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEABQxQBcUsUAbEAGmtoaeYH0BBNHQAWKDLxr1GLXgDMA1jgCeIALoBfNqHR0yaCgk5Se7I9xmCRYgUNHiFytZpAAxNMz4A5MAFs8qjixRQlwkSgBhMBElAAIAWRxoHGZUYQgnDSA@sort(ID)?pcid=static" | relative_url }}">Protocols</a></p>
