--- a/gudmap/projects/gudmap2/index.html
+++ b/gudmap/projects/gudmap2/index.html
@@ -6,12 +6,12 @@ title: GUDMAP2 Projects
 <p><em>Funding period: 2011 through 2016 (<a href="http://grants.nih.gov/grants/guide/rfa-files/RFA-DK-11-001.html">RFA-DK-11-001</a>)<br>
 Main focus is lower urinary tract (includes human GUDMAP extension).</em></p>
 
-<p>Project descriptions for <a href="/gudmap/projects/gudmap2/">GUDMAP 2</a> :</p>
+<p>Project descriptions for <a href="{{ "/gudmap/projects/gudmap2/" | relative_url }}">GUDMAP 2</a> :</p>
 
 <ul>
-	<li><a href="/gudmap/projects/gudmap2/cohn-group/">Marty Cohn </a></li>
-		<li><a href="/gudmap/projects/gudmap2/edinburgh-group/">Edinburgh Core Database</a></li>
-		<li><a href="/gudmap/projects/gudmap2/keast-group/">Janet Keast</a></li>
-		<li><a href="/gudmap/projects/gudmap2/mcmahon-group/">Andy McMahon </a></li>
-		<li><a href="/gudmap/projects/gudmap2/mendelsohn-group/">Cathy Mendelsohn</a></li>
+	<li><a href="{{ "/gudmap/projects/gudmap2/cohn-group/" | relative_url }}">Marty Cohn </a></li>
+		<li><a href="{{ "/gudmap/projects/gudmap2/edinburgh-group/" | relative_url }}">Edinburgh Core Database</a></li>
+		<li><a href="{{ "/gudmap/projects/gudmap2/keast-group/" | relative_url }}">Janet Keast</a></li>
+		<li><a href="{{ "/gudmap/projects/gudmap2/mcmahon-group/" | relative_url }}">Andy McMahon </a></li>
+		<li><a href="{{ "/gudmap/projects/gudmap2/mendelsohn-group/" | relative_url }}">Cathy Mendelsohn</a></li>
 </ul>
