--- a/gudmap/projects/index.html
+++ b/gudmap/projects/index.html
@@ -9,7 +9,7 @@ title: GUDMAP Projects
  <p>You can find the <strong><a href="gudmap4/GUDMAP-Project-Matrix.xlsx">projections of data coming from GUDMAP4 projects in this spreadsheet</a></strong>.</p>
 <ul class="projects-list">
 {% for project in site.data.gudmap.projects-g4 %}
-	<li><a href="/gudmap/projects/gudmap4/{{ project.slug}}/">{{project.project_title}}</a>  <small>({{project.pi}}, <em>{{project.institute}}</em>{% if project.copi != null %}
+	<li><a href="{{ "/gudmap/projects/gudmap4/{{ project.slug}}/" | relative_url }}">{{project.project_title}}</a>  <small>({{project.pi}}, <em>{{project.institute}}</em>{% if project.copi != null %}
     / {{project.copi}}, <em>{{project.coinstitute}}</em>{% endif %}{% if project.cocopi != null %}  / {{project.cocopi}}, <em>{{project.cocoinstitute}}</em>{% endif %})</small></li>
 {% endfor %}
 </ul>
@@ -21,7 +21,7 @@ title: GUDMAP Projects
 Main focus is expanding our understanding of human development of the genito-urinary system.</em></p>
 <ul class="projects-list">
 {% for project in site.data.gudmap.projects-g3 %}
-	<li><a href="/gudmap/projects/gudmap3/{{ project.slug}}/">{{project.project_title}}</a>  <small>({{project.pi}}, <em>{{project.institute}}</em>{% if project.copi != null %}
+	<li><a href="{{ "/gudmap/projects/gudmap3/{{ project.slug}}/" | relative_url }}">{{project.project_title}}</a>  <small>({{project.pi}}, <em>{{project.institute}}</em>{% if project.copi != null %}
     / {{project.copi}}, <em>{{project.coinstitute}}</em>{% elsif project.multipis != null %}{% for item in project.multipis %}  / {{item.multipi}}, <em>{{item.mpi-institute}}</em>{% endfor %}{% endif %})</small></li>
 {% endfor %}
 </ul>
@@ -33,14 +33,14 @@ Main focus is expanding our understanding of human development of the genito-uri
 <p><em>Funding period: 2011 through 2016 (<a href="http://grants.nih.gov/grants/guide/rfa-files/RFA-DK-11-001.html">RFA-DK-11-001</a>)<br>
 Main focus is lower urinary tract (includes human GUDMAP extension).</em></p>
 
-<p>Project descriptions for <a href="/gudmap/projects/gudmap2/">GUDMAP 2</a> :</p>
+<p>Project descriptions for <a href="{{ "/gudmap/projects/gudmap2/" | relative_url }}">GUDMAP 2</a> :</p>
 
 <ul>
-	<li><a href="/gudmap/projects/gudmap2/cohn-group/">Marty Cohn </a></li>
-		<li><a href="/gudmap/projects/gudmap2/edinburgh-group/">Edinburgh Core Database</a></li>
-		<li><a href="/gudmap/projects/gudmap2/keast-group/">Janet Keast</a></li>
-		<li><a href="/gudmap/projects/gudmap2/mcmahon-group/">Andy McMahon </a></li>
-		<li><a href="/gudmap/projects/gudmap2/mendelsohn-group/">Cathy Mendelsohn</a></li>
+	<li><a href="{{ "/gudmap/projects/gudmap2/cohn-group/" | relative_url }}">Marty Cohn </a></li>
+		<li><a href="{{ "/gudmap/projects/gudmap2/edinburgh-group/" | relative_url }}">Edinburgh Core Database</a></li>
+		<li><a href="{{ "/gudmap/projects/gudmap2/keast-group/" | relative_url }}">Janet Keast</a></li>
+		<li><a href="{{ "/gudmap/projects/gudmap2/mcmahon-group/" | relative_url }}">Andy McMahon </a></li>
+		<li><a href="{{ "/gudmap/projects/gudmap2/mendelsohn-group/" | relative_url }}">Cathy Mendelsohn</a></li>
 </ul>
 
 <hr>
@@ -49,19 +49,19 @@ Main focus is lower urinary tract (includes human GUDMAP extension).</em></p>
 
 <p><em>Funding period: 2005 through 2011 (<a href="https://grants.nih.gov/grants/guide/pa-files/PAR-04-042.html">PAR-04-042</a>)<br>
 Main focus was the kidney, also minor focus on reproductive system, bladder, pelvic region and prostate.</em></p>
-<p>Project descriptions for <a href="/gudmap/projects/gudmap1/">GUDMAP 1:</a></p>
+<p>Project descriptions for <a href="{{ "/gudmap/projects/gudmap1/" | relative_url }}">GUDMAP 1:</a></p>
 <ul>
-<li><a href="/gudmap/projects/gudmap1/capel-group/">Blanche Capel</a></li>
-  <li><a href="/gudmap/projects/gudmap1/gaido-group/">Kevin Gaido</a></li>
-  <li><a href="/gudmap/projects/gudmap1/edinburgh-group/">Edinburgh Group (Editorial Office and Database Core)</a></li>
-  <li><a href="/gudmap/projects/gudmap1/lessard-group/">Jim Lessard</a></li>
-  <li><a href="/gudmap/projects/gudmap1/little-group/">Melissa Little</a></li>
-  <li><a href="/gudmap/projects/gudmap1/mcmahon-group/">Andy McMahon</a></li>
-  <li><a href="/gudmap/projects/gudmap1/mendelsohn-group/">Cathy Mendelsohn</a></li>
-  <li><a href="/gudmap/projects/gudmap1/potter-group/">Steve Potter </a></li>
-  <li><a href="/gudmap/projects/gudmap1/southard-smith-group/">Michelle Southard-Smith</a></li>
-  <li><a href="/gudmap/projects/gudmap1/vezina-group/">Chad Vezina</a></li>
-  <li><a href="/gudmap/projects/gudmap1/zhang-group/">Pumin Zhang </a></li>
+<li><a href="{{ "/gudmap/projects/gudmap1/capel-group/" | relative_url }}">Blanche Capel</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/gaido-group/" | relative_url }}">Kevin Gaido</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/edinburgh-group/" | relative_url }}">Edinburgh Group (Editorial Office and Database Core)</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/lessard-group/" | relative_url }}">Jim Lessard</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/little-group/" | relative_url }}">Melissa Little</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/mcmahon-group/" | relative_url }}">Andy McMahon</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/mendelsohn-group/" | relative_url }}">Cathy Mendelsohn</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/potter-group/" | relative_url }}">Steve Potter </a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/southard-smith-group/" | relative_url }}">Michelle Southard-Smith</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/vezina-group/" | relative_url }}">Chad Vezina</a></li>
+  <li><a href="{{ "/gudmap/projects/gudmap1/zhang-group/" | relative_url }}">Pumin Zhang </a></li>
 </ul>
 
 <hr>
@@ -70,14 +70,14 @@ Main focus was the kidney, also minor focus on reproductive system, bladder, pel
 
 <p><em>Funding period: 2013 through 2015 (<a href="http://grants.nih.gov/grants/guide/rfa-files/RFA-DK-12-024.html">RFA-DK-12-024</a>)<br>
 Focus on nociceptors (pain receptors) and associated cell types in pain processing of the urinary tract and pelvic region.</em></p>
-<p>Project descriptions for <a href="/gudmap/projects/ngudmap/">nGUDMAP</a>:</p>
+<p>Project descriptions for <a href="{{ "/gudmap/projects/ngudmap/" | relative_url }}">nGUDMAP</a>:</p>
 <ul>
-  <li><a href="/gudmap/projects/ngudmap/ahern-group/">Gerard Ahern</a></li>
-  <li><a href="/gudmap/projects/ngudmap/baldock-group/">Richard Baldock</a></li>
-  <li><a href="/gudmap/projects/ngudmap/edinburgh-group/">Edinburgh Core Database</a></li>
-  <li><a href="/gudmap/projects/ngudmap/jain-group/">Sanjay Jain</a></li>
-  <li><a href="/gudmap/projects/ngudmap/southard-smith-group/">Michelle Southard-Smith</a></li>
-  <li><a href="/gudmap/projects/ngudmap/keast-group/">Janet Keast</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/ahern-group/" | relative_url }}">Gerard Ahern</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/baldock-group/" | relative_url }}">Richard Baldock</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/edinburgh-group/" | relative_url }}">Edinburgh Core Database</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/jain-group/" | relative_url }}">Sanjay Jain</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/southard-smith-group/" | relative_url }}">Michelle Southard-Smith</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/keast-group/" | relative_url }}">Janet Keast</a></li>
 </ul>
 
 <hr>
