--- a/gudmap/projects/ngudmap/index.html
+++ b/gudmap/projects/ngudmap/index.html
@@ -5,12 +5,12 @@ title: nGUDMAP Projects
 
 <p><em>Funding period: 2013 through 2015 (<a href="http://grants.nih.gov/grants/guide/rfa-files/RFA-DK-12-024.html">RFA-DK-12-024</a>)<br>
 Focus on nociceptors (pain receptors) and associated cell types in pain processing of the urinary tract and pelvic region.</em></p>
-<p>Project descriptions for <a href="/gudmap/projects/ngudmap/">nGUDMAP</a>:</p>
+<p>Project descriptions for <a href="{{ "/gudmap/projects/ngudmap/" | relative_url }}">nGUDMAP</a>:</p>
 <ul>
-  <li><a href="/gudmap/projects/ngudmap/ahern-group/">Gerard Ahern</a></li>
-  <li><a href="/gudmap/projects/ngudmap/baldock-group/">Richard Baldock</a></li>
-  <li><a href="/gudmap/projects/ngudmap/edinburgh-group/">Edinburgh Core Database</a></li>
-  <li><a href="/gudmap/projects/ngudmap/jain-group/">Sanjay Jain</a></li>
-  <li><a href="/gudmap/projects/ngudmap/southard-smith-group/">Michelle Southard-Smith</a></li>
-  <li><a href="/gudmap/projects/ngudmap/keast-group/">Janet Keast</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/ahern-group/" | relative_url }}">Gerard Ahern</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/baldock-group/" | relative_url }}">Richard Baldock</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/edinburgh-group/" | relative_url }}">Edinburgh Core Database</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/jain-group/" | relative_url }}">Sanjay Jain</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/southard-smith-group/" | relative_url }}">Michelle Southard-Smith</a></li>
+  <li><a href="{{ "/gudmap/projects/ngudmap/keast-group/" | relative_url }}">Janet Keast</a></li>
 </ul>
