--- a/resources/disease/index.html
+++ b/resources/disease/index.html
@@ -12,7 +12,7 @@ description: Links to websites useful for understanding genitourinary disease th
 
 <p>Studying development is important as some diseases can occur as a consequence of events that take place during development. Problems during development can result in the incorrect formation of structures, the consequences of which can lead to disease. For example, reduced nephron number may lead to the early onset of renal disease. Understanding development, in particular the role of stem cells, may also lead to future therapies based on regeneration.</p>
 
-<p>For more information go to the <a href="/resources/tools/#genitourinary-disease">Genitourinary Disease</a> section of the "Community Tools" page.</p>
+<p>For more information go to the <a href="{{ "/resources/tools/#genitourinary-disease" | relative_url }}">Genitourinary Disease</a> section of the "Community Tools" page.</p>
 
 <h2>About the Resource</h2>
 
@@ -25,4 +25,4 @@ description: Links to websites useful for understanding genitourinary disease th
   <li>associations between genes and Mammalian Phenotype (MP) terms from the renal/urinary &amp; reproductive systems (Coming soon)</li>
 </ul>
 
-<p>Go to <a href="/resources/disease/disease-info/">GUDMAP Disease Resource Information</a> for more details on how disease-gene and phenotype-gene associations are determined.</p>
+<p>Go to <a href="{{ "/resources/disease/disease-info/" | relative_url }}">GUDMAP Disease Resource Information</a> for more details on how disease-gene and phenotype-gene associations are determined.</p>
