--- a/resources/genital-tubercule-atlas/index.html
+++ b/resources/genital-tubercule-atlas/index.html
@@ -46,9 +46,9 @@ description: A set of 3D reference models with and without the gene-expression p
          });
 </script>
 
-<p><em>Provided by <a href="/gudmap/projects/gudmap3/cohn-group/">Martin J. Cohn Lab</a>, University of Florida</em> <br/><small>March 2013 (GUDMAP)</small></p>
+<p><em>Provided by <a href="{{ "/gudmap/projects/gudmap3/cohn-group/" | relative_url }}">Martin J. Cohn Lab</a>, University of Florida</em> <br/><small>March 2013 (GUDMAP)</small></p>
 
-<p class="lead">The atlas below displays a set of 3D reference models with and without the gene-expression patterns for the marker gene <a href="/chaise/record/#2/Common:Gene/RID=Q-4FR4">Shh (sonic hedgehog)</a>. </p>
+<p class="lead">The atlas below displays a set of 3D reference models with and without the gene-expression patterns for the marker gene <a href="{{ "/chaise/record/#2/Common:Gene/RID=Q-4FR4" | relative_url }}">Shh (sonic hedgehog)</a>. </p>
 
 <p>Click on the links in the table to view the available reference models. Note the marker gene models will be spatially mapped to the wild-type embryos to enable comparison of new data against the reference pattern.</p>
 
