--- a/resources/tissue-summaries/index.html
+++ b/resources/tissue-summaries/index.html
@@ -7,43 +7,43 @@ description: High-quality diagrams of GenitoUrinary tissues that link to deeper 
 <div class="organs">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFMDWOAnnCEjmNgBYC0ARigB4gA0p5Vc8IAtjgC6QcAB0oYUSEAF0AvjKA@sort(Name)"><img class="img-responsive" src="images/Homepage_kidney.jpg" alt="Schematics for the Metanephros in Mouse"  /></a>
+        <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFMDWOAnnCEjmNgBYC0ARigB4gA0p5Vc8IAtjgC6QcAB0oYUSEAF0AvjKA@sort(Name)" | relative_url }}"><img class="img-responsive" src="images/Homepage_kidney.jpg" alt="Schematics for the Metanephros in Mouse"  /></a>
       </div>
       <div class="panel-body">
-        <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFMDWOAnnCEjmNgBYC0ARigB4gA0p5Vc8IAtjgC6QcAB0oYUSEAF0AvjKA@sort(Name)"><h5 class="panel-title">Metanephros</h5></a>
+        <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFMDWOAnnCEjmNgBYC0ARigB4gA0p5Vc8IAtjgC6QcAB0oYUSEAF0AvjKA@sort(Name)" | relative_url }}"><h5 class="panel-title">Metanephros</h5></a>
       </div>
     </div>
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFMDWOAnnCEjmNgBYC0ARigB4gA0p5Vc8IAMgKoAqIALoBfUUA@sort(ID)"><img class="img-responsive" src="images/Homepage_LUT.jpg" alt="Schematics for the LUT in Mouse" /></a>
+      <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFMDWOAnnCEjmNgBYC0ARigB4gA0p5Vc8IAMgKoAqIALoBfUUA@sort(ID)" | relative_url }}"><img class="img-responsive" src="images/Homepage_LUT.jpg" alt="Schematics for the LUT in Mouse" /></a>
     </div>
     <div class="panel-body">
-      <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFMDWOAnnCEjmNgBYC0ARigB4gA0p5Vc8IAMgKoAqIALoBfUUA@sort(ID)"><h5 class="panel-title">Lower Urinary Tract</h5></a>
+      <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFMDWOAnnCEjmNgBYC0ARigB4gA0p5Vc8IAMgKoAqIALoBfUUA@sort(ID)" | relative_url }}"><h5 class="panel-title">Lower Urinary Tract</h5></a>
     </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
-      <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAUTAwBsBPAAgHEAqjwDKXJABccxHgEYQFNp16CRYydIBMsHgBVhMgJw8BGFAHMcEcbTAddGMFnEgAugF93QA@sort(Name)"><img class="img-responsive" src="images/Homepage_EarlyReproductive.jpg" alt="Schematics for the Early UGS in Mouse"  /></a>
+      <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAUTAwBsBPAAgHEAqjwDKXJABccxHgEYQFNp16CRYydIBMsHgBVhMgJw8BGFAHMcEcbTAddGMFnEgAugF93QA@sort(Name)" | relative_url }}"><img class="img-responsive" src="images/Homepage_EarlyReproductive.jpg" alt="Schematics for the Early UGS in Mouse"  /></a>
     </div>
     <div class="panel-body">
-      <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAUTAwBsBPAAgHEAqjwDKXJABccxHgEYQFNp16CRYydIBMsHgBVhMgJw8BGFAHMcEcbTAddGMFnEgAugF93QA@sort(Name)"><h5 class="panel-title">Early Genitourinary System</h5></a>
+      <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAUTAwBsBPAAgHEAqjwDKXJABccxHgEYQFNp16CRYydIBMsHgBVhMgJw8BGFAHMcEcbTAddGMFnEgAugF93QA@sort(Name)" | relative_url }}"><h5 class="panel-title">Early Genitourinary System</h5></a>
     </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
-      <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAWTABscACAJRwAcAdFwDKATyQAXHMS4BGEBTadeA4eKkyuAJlhcAKiO0AWLgFF+tKFbHFajCmbkBmLgApD2uQEouynAD0AGIyHNx8-BgoUGhYkrQAbtwa0sQgALoAvllAA@sort(ID)"><img class="img-responsive" src="images/Homepage_MaleReproductive.jpg" alt="Schematics for the Male Reproductive System in Mouse"  /></a>
+      <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAWTABscACAJRwAcAdFwDKATyQAXHMS4BGEBTadeA4eKkyuAJlhcAKiO0AWLgFF+tKFbHFajCmbkBmLgApD2uQEouynAD0AGIyHNx8-BgoUGhYkrQAbtwa0sQgALoAvllAA@sort(ID)" | relative_url }}"><img class="img-responsive" src="images/Homepage_MaleReproductive.jpg" alt="Schematics for the Male Reproductive System in Mouse"  /></a>
     </div>
     <div class="panel-body">
-      <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAWTABscACAJRwAcAdFwDKATyQAXHMS4BGEBTadeA4eKkyuAJlhcAKiO0AWLgFF+tKFbHFajCmbkBmLgApD2uQEouynAD0AGIyHNx8-BgoUGhYkrQAbtwa0sQgALoAvllAA@sort(ID)"><h5 class="panel-title">Male Reproductive System</h5></a>
+      <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAWTABscACAJRwAcAdFwDKATyQAXHMS4BGEBTadeA4eKkyuAJlhcAKiO0AWLgFF+tKFbHFajCmbkBmLgApD2uQEouynAD0AGIyHNx8-BgoUGhYkrQAbtwa0sQgALoAvllAA@sort(ID)" | relative_url }}"><h5 class="panel-title">Male Reproductive System</h5></a>
     </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
-      <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAUQEYBmAAgAoAVAMoAmNgEouAWTAAbHAHoAYjmIycXAEo4ADhhRQ0WAC60AbmoEBPJIeUgKSlbI3aAdF0vXbAXQC+ZZOjYOADWOBb4SDhg2FQAtABGKAAediCR0dRMIABmyqogvr5AA@sort(ID)"><img class="img-responsive" src="images/Homepage_FemaleReproductive.jpg" alt="Schematics for the Female Reproductive System in Mouse"  /></a>
+      <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAUQEYBmAAgAoAVAMoAmNgEouAWTAAbHAHoAYjmIycXAEo4ADhhRQ0WAC60AbmoEBPJIeUgKSlbI3aAdF0vXbAXQC+ZZOjYOADWOBb4SDhg2FQAtABGKAAediCR0dRMIABmyqogvr5AA@sort(ID)" | relative_url }}"><img class="img-responsive" src="images/Homepage_FemaleReproductive.jpg" alt="Schematics for the Female Reproductive System in Mouse"  /></a>
     </div>
     <div class="panel-body">
-      <a href="/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAUQEYBmAAgAoAVAMoAmNgEouAWTAAbHAHoAYjmIycXAEo4ADhhRQ0WAC60AbmoEBPJIeUgKSlbI3aAdF0vXbAXQC+ZZOjYOADWOBb4SDhg2FQAtABGKAAediCR0dRMIABmyqogvr5AA@sort(ID)"><h5 class="panel-title">Female Reproductive System</h5></a>
+      <a href="{{ "/chaise/recordset/#2/Schematics:Schematic_Group/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gDkwBbPAGhCwAsUBLXJOeEAUQEYBmAAgAoAVAMoAmNgEouAWTAAbHAHoAYjmIycXAEo4ADhhRQ0WAC60AbmoEBPJIeUgKSlbI3aAdF0vXbAXQC+ZZOjYOADWOBb4SDhg2FQAtABGKAAediCR0dRMIABmyqogvr5AA@sort(ID)" | relative_url }}"><h5 class="panel-title">Female Reproductive System</h5></a>
     </div>
   </div>
 </div>
