--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -11,17 +11,17 @@ description: GUDMAP provides useful tutorials for students and newcomers to geni
   <!-- List group -->
   <ul class="list-group">
     <li class="list-group-item"><a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">Querying the Data Browser</a></li>
-    <li class="list-group-item"><a href="/tutorials/kidney-dev/">Development of the Kidney in Mouse and Human</a></li>
-    <li class="list-group-item"><a href="/tutorials/innervation/">Lower Urinary Tract Innervation and its Development</a></li>
-    <li class="list-group-item"><a href="/tutorials/prostate-dev/">Prostate Development</a></li>
-    <li class="list-group-item"><a href="/tutorials/urogenital-dev/">Urogenital System Development</a>
+    <li class="list-group-item"><a href="{{ "/tutorials/kidney-dev/" | relative_url }}">Development of the Kidney in Mouse and Human</a></li>
+    <li class="list-group-item"><a href="{{ "/tutorials/innervation/" | relative_url }}">Lower Urinary Tract Innervation and its Development</a></li>
+    <li class="list-group-item"><a href="{{ "/tutorials/prostate-dev/" | relative_url }}">Prostate Development</a></li>
+    <li class="list-group-item"><a href="{{ "/tutorials/urogenital-dev/" | relative_url }}">Urogenital System Development</a>
       <ul>
-        <li class="list-group-item"><a href="/tutorials/urogenital-dev/reproductive-system/">Development of the Murine Reproductive System</a></li>
-        <li class="list-group-item"><a href="/tutorials/urogenital-dev/urinary-system/">Development of Murine Urinary System</a></li>
+        <li class="list-group-item"><a href="{{ "/tutorials/urogenital-dev/reproductive-system/" | relative_url }}">Development of the Murine Reproductive System</a></li>
+        <li class="list-group-item"><a href="{{ "/tutorials/urogenital-dev/urinary-system/" | relative_url }}">Development of Murine Urinary System</a></li>
       </ul>
     </li>
 
-    <li class="list-group-item"><a href="/tutorials/void-assay/">Micturition Assessment in Mice</a></li>
+    <li class="list-group-item"><a href="{{ "/tutorials/void-assay/" | relative_url }}">Micturition Assessment in Mice</a></li>
 
   </ul>
 </div>
