--- a/tutorials/innervation/index.html
+++ b/tutorials/innervation/index.html
@@ -60,18 +60,18 @@ description: Educational tutorial focused on the nerves regulating the lower uri
 <p>Each autonomic axon makes many synapses with the nearby tissue, indicated by their characteristic appearance [Figure 2]. Near their points of termination, they have numerous swellings (varicosities) that contain neurotransmitters. Motor axons are often visualized by immunohistochemically labeling transmitters or related proteins that are concentrated in these varicosities (e.g., enzymes required for transmitter synthesis or transmitter recycling at the synapse).</p>
 
 <div class="tutorial-series thirds">
-    <div class="thirds-1"><a href="/id/N-FKKE"><img src="thumbs/Fig2A-1-61465.jpg.256.pyr-thumb.png" alt=""></a></div>
-    <div class="thirds-2"><a href="/id/N-FN0P"><img src="thumbs/Fig2A-2-62691.jpg.256.pyr-thumb.png" alt=""></a></div>
-    <div class="thirds-3"><a href="/id/N-FNFP"><img src="thumbs/Fig2A-3-63036.jpg.256.pyr-thumb.png" alt=""></a></div>
+    <div class="thirds-1"><a href="{{ "/id/N-FKKE" | relative_url }}"><img src="thumbs/Fig2A-1-61465.jpg.256.pyr-thumb.png" alt=""></a></div>
+    <div class="thirds-2"><a href="{{ "/id/N-FN0P" | relative_url }}"><img src="thumbs/Fig2A-2-62691.jpg.256.pyr-thumb.png" alt=""></a></div>
+    <div class="thirds-3"><a href="{{ "/id/N-FNFP" | relative_url }}"><img src="thumbs/Fig2A-3-63036.jpg.256.pyr-thumb.png" alt=""></a></div>
 </div>
 
 <div class="figcaption">
   <p><strong>Figure 2A:  Structure of cholinergic motor axons in the bladder (adult mouse).</strong><br/>
-  <em>Examples of cholinergic axons immunolabelled for vesicular acetylcholine transporter (VAChT; Slc18a3) in cryosections of mouse bladder at E16 (<a href="/id/N-FKKE">See GUDMAP RID N-FKKE</a>), P2 (<a href="/id/N-FN0P">See GUDMAP RID N-FN0P</a>) and adult (<a href="/id/N-FNFP">See GUDMAP RID N-FNFP</a>).</em></p>
+  <em>Examples of cholinergic axons immunolabelled for vesicular acetylcholine transporter (VAChT; Slc18a3) in cryosections of mouse bladder at E16 (<a href="{{ "/id/N-FKKE" | relative_url }}">See GUDMAP RID N-FKKE</a>), P2 (<a href="{{ "/id/N-FN0P" | relative_url }}">See GUDMAP RID N-FN0P</a>) and adult (<a href="{{ "/id/N-FNFP" | relative_url }}">See GUDMAP RID N-FNFP</a>).</em></p>
 </div>
 
   <video controls width="800">
-      <source src="/tutorials/innervation/Fig2B_motor_movie.mp4" type="video/mp4" />
+      <source src="{{ "/tutorials/innervation/Fig2B_motor_movie.mp4" | relative_url }}" type="video/mp4" />
   </video>
 
 <div class="figcaption">
@@ -113,14 +113,14 @@ description: Educational tutorial focused on the nerves regulating the lower uri
 <p>Sensory axons have a characteristic appearance within the LUT tissues [Figure 3]. These have various branching patterns at their terminals but generally do not have varicosities. </p>
 
 <div class="tutorial-series thirds">
-    <div class="thirds-1"><a href="/id/N-FM22"><img src="thumbs/Fig3A-1-61729.jpg.256.pyr-thumb.png" alt=""></a></div>
-    <div class="thirds-2"><a href="/id/N-FN1T"><img src="thumbs/Fig3A-2-62712.jpg.256.pyr-thumb.png" alt=""></a></div>
-    <div class="thirds-3"><a href="/id/N-FNF2"><img src="thumbs/Fig3A-3-63025.jpg.256.pyr-thumb.png" alt=""></a></div>
+    <div class="thirds-1"><a href="{{ "/id/N-FM22" | relative_url }}"><img src="thumbs/Fig3A-1-61729.jpg.256.pyr-thumb.png" alt=""></a></div>
+    <div class="thirds-2"><a href="{{ "/id/N-FN1T" | relative_url }}"><img src="thumbs/Fig3A-2-62712.jpg.256.pyr-thumb.png" alt=""></a></div>
+    <div class="thirds-3"><a href="{{ "/id/N-FNF2" | relative_url }}"><img src="thumbs/Fig3A-3-63025.jpg.256.pyr-thumb.png" alt=""></a></div>
 </div>
 
 <div class="figcaption">
   <p><strong>Figure 3A: Structure of peptidergic sensory axons in the bladder (adult mouse).</strong><br/>
-  <em>Examples of sensory axons immunolabelled for calcitonin gene-related peptide (CGRP; Calca) in cryosections of mouse bladder at E16 (<a href="/id/N-FM22">See GUDMAP RID N-FM22</a>), P2 (<a href="/id/N-FN1T">See GUDMAP RID N-FN1T</a>) and adult (<a href="/id/N-FNF2">See GUDMAP RID N-FNF2</a>).</em></p>
+  <em>Examples of sensory axons immunolabelled for calcitonin gene-related peptide (CGRP; Calca) in cryosections of mouse bladder at E16 (<a href="{{ "/id/N-FM22" | relative_url }}">See GUDMAP RID N-FM22</a>), P2 (<a href="{{ "/id/N-FN1T" | relative_url }}">See GUDMAP RID N-FN1T</a>) and adult (<a href="{{ "/id/N-FNF2" | relative_url }}">See GUDMAP RID N-FNF2</a>).</em></p>
 </div>
 
 <video controls width="800">
@@ -219,8 +219,8 @@ In addition to the PG, there are also smaller ganglia that are located near the 
 
 <div class="figcaption">
   <p><strong>Figure 7:  Developing bladder innervation at 14.5 dpc in the mouse.</strong><br/>
-  <em><strong>A:</strong> Ventral whole mount views looking down on the fetal mouse bladder from an anterior perspective.  Schematic at left illustrates the position of Sox10+ neural crest derived pelvic ganglia (pg) flanking either side of the bladder neck with developing nerve processes (dotted lines) extending outwards from the bladder neck (bn) into the bladder body (b) towards the dome (bd). Whole mount image of Sox10-H2BVenus transgene expression at right shows the location of aggregated Sox10+ neural crest derived progenitors within pelvic ganglia and along extending nerve processes. (<a href="/id/17-DSR8">See GUDMAP RID 17-DSR8</a>)<br/>
-  <strong>B:</strong> Schematic at left illustrates the position of pelvic ganglia relative to the forming bladder, ureters (ur) and urethra (u). Whole mount image of Sox10-H2BVenus fetal mouse lower urinary tract shows PG extending ventrally along the lateral flanks of the urethra.  Sox10+ cells accompany extension of neural processes out into the bladder body both laterally along the major blood vessels (bv, indicated by dotted yellow lines) and anteriorly in the medial region. (<a href="/id/17-DSRE">See GUDMAP RID 17-DSRE</a>)</em></p>
+  <em><strong>A:</strong> Ventral whole mount views looking down on the fetal mouse bladder from an anterior perspective.  Schematic at left illustrates the position of Sox10+ neural crest derived pelvic ganglia (pg) flanking either side of the bladder neck with developing nerve processes (dotted lines) extending outwards from the bladder neck (bn) into the bladder body (b) towards the dome (bd). Whole mount image of Sox10-H2BVenus transgene expression at right shows the location of aggregated Sox10+ neural crest derived progenitors within pelvic ganglia and along extending nerve processes. (<a href="{{ "/id/17-DSR8" | relative_url }}">See GUDMAP RID 17-DSR8</a>)<br/>
+  <strong>B:</strong> Schematic at left illustrates the position of pelvic ganglia relative to the forming bladder, ureters (ur) and urethra (u). Whole mount image of Sox10-H2BVenus fetal mouse lower urinary tract shows PG extending ventrally along the lateral flanks of the urethra.  Sox10+ cells accompany extension of neural processes out into the bladder body both laterally along the major blood vessels (bv, indicated by dotted yellow lines) and anteriorly in the medial region. (<a href="{{ "/id/17-DSRE" | relative_url }}">See GUDMAP RID 17-DSRE</a>)</em></p>
 </div>
 
 <p>As the LUT matures postnatally the location of the pelvic ganglia shift away from their initial location just lateral to the urethra and move dorsally towards the distal colon.  In females the final position of the major PG is immediately lateral to the cervix, while in males the major PG is located behind and just above the dorso-lateral prostate lobes.  This spatial transition begins in the early postnatal period and results in clear distinction between major PG that reside at a distance from the bladder and the accessory ganglia that remain in close proximity to the bladder neck.</p>
@@ -229,7 +229,7 @@ In addition to the PG, there are also smaller ganglia that are located near the 
 
 <div class="figcaption">
   <p><strong>Figure 8: Spatial shift of developing pelvic and accessory ganglia in the mouse.</strong><br/>
-  <em>In fetal stages of development (17 dpc; <a href="/id/17-DSRM">See GUDMAP RID 17-DSRM</a>) neural crest derived progenitors labeled by cre:LoxP lineage expression form a large aggregate of cells (pg) flanking the bladder neck that extends down along the lateral sides of the urethra (u).  As the urogenital system matures postnatally (P9; <a href="/id/17-DSRT">See GUDMAP RID 17-DSRT</a>), this aggregate splits into two populations one that forms accessory ganglia near the bladder neck (ag) and one that moves dorsally to form the main body of the adult pelvic ganglia (mpg).</em></p>
+  <em>In fetal stages of development (17 dpc; <a href="{{ "/id/17-DSRM" | relative_url }}">See GUDMAP RID 17-DSRM</a>) neural crest derived progenitors labeled by cre:LoxP lineage expression form a large aggregate of cells (pg) flanking the bladder neck that extends down along the lateral sides of the urethra (u).  As the urogenital system matures postnatally (P9; <a href="{{ "/id/17-DSRT" | relative_url }}">See GUDMAP RID 17-DSRT</a>), this aggregate splits into two populations one that forms accessory ganglia near the bladder neck (ag) and one that moves dorsally to form the main body of the adult pelvic ganglia (mpg).</em></p>
 </div>
 
 <h2><a name="development-of-bladder-innervation" id="development-of-bladder-innervation" class="offset"></a>Development of bladder innervation</h2>
