--- a/tutorials/kidney-dev/index.html
+++ b/tutorials/kidney-dev/index.html
@@ -6,12 +6,12 @@ description: Educational tutorial that describes the development of the kidney a
 ---
 
 <div class="tutorial-gallery slider" data-slick='{"dots": true}'>
-  <a href="#nephrons"><img src="/assets/img/tutorials/diagram-developing-kidney-thumb.png" alt="..." class="img-thumbnail"></a>
-  <a href="#dynamic-nephrogenesis"><img src="/assets/img/tutorials/nephrogenesis-thumb.png" alt="..." class="img-thumbnail"></a>
-  <a href="#mouse-vs-human"><img src="/assets/img/tutorials/mouse-vs-human-kidney-thumb.png" alt="..." class="img-thumbnail"></a>
-  <a href="#modeling-human-kidney-dev"><img src="/assets/img/tutorials/nephron-patterning-thumb.png" alt="..." class="img-thumbnail"></a>
-  <a href="#modeling-human-kidney-dev"><img src="/assets/img/tutorials/nephron-precursor-thumb.png" alt="..." class="img-thumbnail"></a>
-  <a href="#modeling-human-kidney-dev"><img src="/assets/img/tutorials/nephrons-in-organoid-thumb.png" alt="..." class="img-thumbnail"></a>
+  <a href="#nephrons"><img src="{{ "/assets/img/tutorials/diagram-developing-kidney-thumb.png" | relative_url }}" alt="..." class="img-thumbnail"></a>
+  <a href="#dynamic-nephrogenesis"><img src="{{ "/assets/img/tutorials/nephrogenesis-thumb.png" | relative_url }}" alt="..." class="img-thumbnail"></a>
+  <a href="#mouse-vs-human"><img src="{{ "/assets/img/tutorials/mouse-vs-human-kidney-thumb.png" | relative_url }}" alt="..." class="img-thumbnail"></a>
+  <a href="#modeling-human-kidney-dev"><img src="{{ "/assets/img/tutorials/nephron-patterning-thumb.png" | relative_url }}" alt="..." class="img-thumbnail"></a>
+  <a href="#modeling-human-kidney-dev"><img src="{{ "/assets/img/tutorials/nephron-precursor-thumb.png" | relative_url }}" alt="..." class="img-thumbnail"></a>
+  <a href="#modeling-human-kidney-dev"><img src="{{ "/assets/img/tutorials/nephrons-in-organoid-thumb.png" | relative_url }}" alt="..." class="img-thumbnail"></a>
 </div>
 
 <p><strong>On this page:</strong></p>
@@ -30,8 +30,8 @@ description: Educational tutorial that describes the development of the kidney a
 
 <div class="well">
   <figure>
-    <a class="colorbox" href="/assets/img/tutorials/diagram-developing-kidney.png">
-    <img src="/assets/img/tutorials/diagram-developing-kidneyx895.png" alt="Diagram of the developing kidney" class="img-responsive"></a>
+    <a class="colorbox" href="{{ "/assets/img/tutorials/diagram-developing-kidney.png" | relative_url }}">
+    <img src="{{ "/assets/img/tutorials/diagram-developing-kidneyx895.png" | relative_url }}" alt="Diagram of the developing kidney" class="img-responsive"></a>
     <figcaption>From: McMahon AP. (2016) <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5007134/">Development of the Mammalian Kidney</a>.
   Curr Top Dev Biol. 117:31-64. PMID: 26969971
     </figcaption>
@@ -56,8 +56,8 @@ description: Educational tutorial that describes the development of the kidney a
 </p>
 <div class="well">
 <figure>
-  <a class="colorbox" href="/assets/img/tutorials/mouse-vs-human-kidney.png">
-    <img src="/assets/img/tutorials/mouse-vs-human-kidneyx895.png" alt="Comparing mouse and human kidneys" class="img-responsive"></a>
+  <a class="colorbox" href="{{ "/assets/img/tutorials/mouse-vs-human-kidney.png" | relative_url }}">
+    <img src="{{ "/assets/img/tutorials/mouse-vs-human-kidneyx895.png" | relative_url }}" alt="Comparing mouse and human kidneys" class="img-responsive"></a>
   <figcaption>Comparing mouse and human kidney
   </figcaption>
 </figure>
@@ -71,8 +71,8 @@ description: Educational tutorial that describes the development of the kidney a
   <div class="col-md-4">
     <div class="well">
       <figure>
-        <a class=" colorbox" href="/assets/img/tutorials/nephron-patterning.png">
-          <img src="/assets/img/tutorials/nephron-patterning.png" alt="Nephron Patterning In The Human Kidney" class="img-responsive"></a>
+        <a class=" colorbox" href="{{ "/assets/img/tutorials/nephron-patterning.png" | relative_url }}">
+          <img src="{{ "/assets/img/tutorials/nephron-patterning.png" | relative_url }}" alt="Nephron Patterning In The Human Kidney" class="img-responsive"></a>
         <figcaption>Nephron Patterning In The Human Kidney
         </figcaption>
       </figure>
@@ -81,7 +81,7 @@ description: Educational tutorial that describes the development of the kidney a
   <div class="col-md-4">
     <div class="well">
       <figure>
-        <a class=" colorbox" href="/assets/img/tutorials/nephron-precursor.png"><img src="/assets/img/tutorials/nephron-precursor.png" alt="Comparing mouse and human kidnes" class="img-responsive"></a>
+        <a class=" colorbox" href="{{ "/assets/img/tutorials/nephron-precursor.png" | relative_url }}"><img src="{{ "/assets/img/tutorials/nephron-precursor.png" | relative_url }}" alt="Comparing mouse and human kidnes" class="img-responsive"></a>
         <figcaption>Nephron Precursor From The Human Kidney
         </figcaption>
       </figure>
@@ -90,7 +90,7 @@ description: Educational tutorial that describes the development of the kidney a
   <div class="col-md-4">
     <div class="well">
       <figure>
-        <a  class=" colorbox" href="/assets/img/tutorials/nephrons-in-organoid.png"><img src="/assets/img/tutorials/nephrons-in-organoid.png" alt="Nephrons Forming  In A Human Kidney Organoid Model System" class="img-responsive"></a>
+        <a  class=" colorbox" href="{{ "/assets/img/tutorials/nephrons-in-organoid.png" | relative_url }}"><img src="{{ "/assets/img/tutorials/nephrons-in-organoid.png" | relative_url }}" alt="Nephrons Forming  In A Human Kidney Organoid Model System" class="img-responsive"></a>
         <figcaption>Nephrons Forming  In A Human Kidney Organoid Model System
         </figcaption>
       </figure>
