--- a/tutorials/prostate-dev/index.html
+++ b/tutorials/prostate-dev/index.html
@@ -7,28 +7,28 @@ description: Tutorial that describes the development of the prostate in mice by 
 
 <div class="tutorial-gallery slider" data-slick='{"dots": true}'>
   <a href="#ugs-to-prostate">
-    <img src="/assets/img/tutorials/16dpc-UGS-wholemount-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/16dpc-UGS-wholemount-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#ugs-to-prostate">
-    <img src="/assets/img/tutorials/16dpc-UGS-saggital-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/16dpc-UGS-saggital-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#androgens-prostate-dev">
-    <img src="/assets/img/tutorials/androgens-prostate-dev-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/androgens-prostate-dev-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#functional-ar">
-    <img src="/assets/img/tutorials/ar-in-mesenchyme-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/ar-in-mesenchyme-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#permissive-induction">
-    <img src="/assets/img/tutorials/mesenchume-instructive-diagram-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/mesenchume-instructive-diagram-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#prostate-morphogenesis">
-    <img src="/assets/img/tutorials/budding-morphogenesis-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/budding-morphogenesis-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#prostate-morphogenesis">
-    <img src="/assets/img/tutorials/gross-appearance-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/gross-appearance-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#prostate-morphogenesis">
-    <img src="/assets/img/tutorials/histological-appearance-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/histological-appearance-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
 </div>
 
@@ -60,8 +60,8 @@ The prostate derives from a transient fetal structure known as the urogenital si
   <div class="col-md-6">
     <div class="well">
       <figure>
-        <a href="/assets/img/tutorials/16dpc-UGS-wholemount.jpg" class=" colorbox">
-        <img src="/assets/img/tutorials/16dpc-UGS-wholemount.jpg" alt="UGS and other components of a 16 dpc male mouse lower urinary tract - whole mount" class="img-responsive"/></a>
+        <a href="{{ "/assets/img/tutorials/16dpc-UGS-wholemount.jpg" | relative_url }}" class=" colorbox">
+        <img src="{{ "/assets/img/tutorials/16dpc-UGS-wholemount.jpg" | relative_url }}" alt="UGS and other components of a 16 dpc male mouse lower urinary tract - whole mount" class="img-responsive"/></a>
         <figcaption>This image shows the UGS and other components of a 16 dpc (days post conception) male mouse lower urinary tract. </figcaption>
       </figure>
     </div>
@@ -69,8 +69,8 @@ The prostate derives from a transient fetal structure known as the urogenital si
   <div class="col-md-6">
     <div class="well">
       <figure>
-        <a class=" colorbox" href="/assets/img/tutorials/16dpc-UGS-saggital.jpg">
-          <img src="/assets/img/tutorials/16dpc-UGS-saggital.jpg" alt="UGS and other components of a 16 dpc male mouse lower urinary tract - saggital"/></a>
+        <a class=" colorbox" href="{{ "/assets/img/tutorials/16dpc-UGS-saggital.jpg" | relative_url }}">
+          <img src="{{ "/assets/img/tutorials/16dpc-UGS-saggital.jpg" | relative_url }}" alt="UGS and other components of a 16 dpc male mouse lower urinary tract - saggital"/></a>
         <figcaption>
         This image is a hematoxylin and eosin-stained UGS tissue section.
         </figcaption>
@@ -90,8 +90,8 @@ The androgen receptor plays a key role in prostate development. It is expressed 
 
 <div class="well">
   <figure>
-    <a class="colorbox" href="/assets/img/tutorials/androgens-prostate-dev.jpg">
-      <img src="/assets/img/tutorials/androgens-prostate-dev.jpg" alt="androgen receptor plays a key role in prostate development" class="img-responsive center-block" />
+    <a class="colorbox" href="{{ "/assets/img/tutorials/androgens-prostate-dev.jpg" | relative_url }}">
+      <img src="{{ "/assets/img/tutorials/androgens-prostate-dev.jpg" | relative_url }}" alt="androgen receptor plays a key role in prostate development" class="img-responsive center-block" />
     </a>
   </figure>
 </div>
@@ -116,8 +116,8 @@ They collected UGSs from control mice and from mice harboring a spontaneous miss
 
 <div class="well">
   <figure>
-    <a class="colorbox" href="/assets/img/tutorials/ar-in-mesenchyme.jpg">
-      <img src="/assets/img/tutorials/ar-in-mesenchyme.jpg" alt="Prostate development requires functional AR in UGS mesenchyme" class="img-responsive center-block" />
+    <a class="colorbox" href="{{ "/assets/img/tutorials/ar-in-mesenchyme.jpg" | relative_url }}">
+      <img src="{{ "/assets/img/tutorials/ar-in-mesenchyme.jpg" | relative_url }}" alt="Prostate development requires functional AR in UGS mesenchyme" class="img-responsive center-block" />
     </a>
   </figure>
 </div>
@@ -139,7 +139,7 @@ The formation of most organs requires the action of one group of cells changing 
 
 <p>In permissive induction, the responding tissue already possesses all of the information needed to reach its potential.  In other words, it knows what it wants to be when it grows up, it is just waiting for permission. This type of inductive interaction is illustrated for the prostate in panel 1.  </p>
 
-  <img src="/assets/img/tutorials/mesenchume-instructive-diagram.jpg" alt="Illustration of permissive induction" class="img-responsive center-block" />
+  <img src="{{ "/assets/img/tutorials/mesenchume-instructive-diagram.jpg" | relative_url }}" alt="Illustration of permissive induction" class="img-responsive center-block" />
 
 
   <p>If the prostate was permissively induced, some UGS epithelial cells would already know they were fated to become prostate epithelium. These cells are indicated by yellow shading. Testicular androgens would bind and activate UGS mesenchymal androgen receptors, yielding a signal that would be sensed by the UGS epithelial cells, and prostate development would begin.
@@ -151,7 +151,7 @@ In instructive induction, the responding tissue does <em>not</em> possess the in
 <p>
 Dr. Gerald Cunha and colleagues demonstrated that the UGS stroma is an inductive inducer of prostate development by performing tissue recombination experiments using fetal mouse UGS and adult mouse bladder.  The epithelial and mesenchymal components of both tissues were separated and recombined similar to the methods used in the Lasnitzki and Mizuno experiment described above, and then the tissues were implanted under the capsule of the kidney of male mice, where they vascularized and matured. UGS mesenchyme was shown to reprogram bladder epithelium into a glandular prostatic epithelium, demonstrating that it is instructive.
 </p>
-<img src="/assets/img/tutorials/mesenchume-instructive-table.jpg" alt="Table of tissue formed due to mesenchyme or epithelial source" class="img-responsive center-block" />
+<img src="{{ "/assets/img/tutorials/mesenchume-instructive-table.jpg" | relative_url }}" alt="Table of tissue formed due to mesenchyme or epithelial source" class="img-responsive center-block" />
 
 <h2><a name="prostate-morphogenesis" id="prostate-morphogenesis" class="offset"></a>Prostate morphogenesis</h2>
 <p>
@@ -162,7 +162,7 @@ It initially comprises a relatively simple tube of endoderm-derived UGS epitheli
 During the <strong>induction phase</strong>, androgens activate androgen receptors in the UGS mesenchyme.</p>
 <p>
 During the <strong>specification phase</strong>, UGS mesenchyme cells instructively program underlying epithelial cells and the specified epithelial cells express <a href="https://www.ncbi.nlm.nih.gov/gene/18095">Nkx3-1</a>.</p>
-<img src="/assets/img/tutorials/budding-morphogenesis.jpg" alt="Movie of budding and branching phases" class="img-responsive pull-right" />
+<img src="{{ "/assets/img/tutorials/budding-morphogenesis.jpg" | relative_url }}" alt="Movie of budding and branching phases" class="img-responsive pull-right" />
 <p>
 During the <strong>budding phase</strong>, solid cords of UGS epithelium grow into UGS mesenchyme in a bilaterally symmetrical and stereotypical pattern. Mature mouse and rat prostate consist of 4 bilaterally symmetrical lobes (the anterior, dorsal, lateral, and ventral lobes) and the anatomical position of these lobes is determined by the anatomical pattern of anterior, dorsal, lateral, and ventral prostatic buds.</p>
 <p>
@@ -173,7 +173,7 @@ Prostatic ducts form lumens that give rise to the mature prostate.</p>
 A movie depicting the budding and branching phases is shown below.</p>
 <div class="video-well">
   <video class="center-block" controls>
-      <source src="/tutorials/prostate-dev/budding.mp4" type="video/mp4" />
+      <source src="{{ "/tutorials/prostate-dev/budding.mp4" | relative_url }}" type="video/mp4" />
       <!-- some other alternative sources
       <source src="budding.ogv" type="video/ogv" />
        -->
@@ -191,12 +191,12 @@ A movie depicting the budding and branching phases is shown below.</p>
 <p>
 The following illustrations are cartoons of the gross appearance of the lower urinary tract during budding and branching morphogenesis.</p>
 
-<img src="/assets/img/tutorials/gross-appearance.jpg" alt="Gross eppearance of the LUT during morphogenesis" class="img-responsive center-block" />
+<img src="{{ "/assets/img/tutorials/gross-appearance.jpg" | relative_url }}" alt="Gross eppearance of the LUT during morphogenesis" class="img-responsive center-block" />
 
 <p>
 Below are schematic diagrams of the multi-layered cells comprising the 17 dpc male mouse UGS and the P50 (Postnatal, ie 50 days after birth) mouse prostate.</p>
 
-<img src="/assets/img/tutorials/histological-appearance.jpg" alt="Histological eppearance of 17 dpc male mouse UGS and the P50 mouse prostate" class="img-responsive center-block" />
+<img src="{{ "/assets/img/tutorials/histological-appearance.jpg" | relative_url }}" alt="Histological eppearance of 17 dpc male mouse UGS and the P50 mouse prostate" class="img-responsive center-block" />
 
 <p>&nbsp;</p>
 <p align="right"><a href="reading-list/">Prostate Development Recommended Reading List &gt;&gt; </a></p>
