--- a/gudmap/logos/index.html
+++ b/gudmap/logos/index.html
@@ -11,14 +11,14 @@ tags: []
   <div class="col-md-12">
     <p>High resolution PNG (1696 × 321, 71KB):</p>
     <p>
-      <a href="/assets/img/GUDMAP_logo.png">
-        <img src="/assets/img/GUDMAP_logo.png" alt="" width="500px">
+      <a href="{{ "/assets/img/GUDMAP_logo.png" | relative_url }}">
+        <img src="{{ "/assets/img/GUDMAP_logo.png" | relative_url }}" alt="" width="500px">
       </a>
     </p>
     <p>Smaller PNG (1196 × 226, 61KB):</p>
     <p>
-      <a href="/assets/img/GUDMAP_logo_smaller.png">
-        <img src="/assets/img/GUDMAP_logo_smaller.png" alt="" width="500px">
+      <a href="{{ "/assets/img/GUDMAP_logo_smaller.png" | relative_url }}">
+        <img src="{{ "/assets/img/GUDMAP_logo_smaller.png" | relative_url }}" alt="" width="500px">
       </a>
     </p>
   </div>
