--- a/resources/cell-lines/index.html
+++ b/resources/cell-lines/index.html
@@ -6,11 +6,11 @@ title: Request iPSC Cell Lines
 <p class="bg-warning"><strong>The subsidy for access to this resource expires summer 2024.</strong>
 </p>
 
-<p>ATLAS-D2K human iPSC <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line">parental</a> and <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line">reporter</a> lines are available by request to the research community.</p>
+<p>ATLAS-D2K human iPSC <a href="{{ "/chaise/recordset/#2/Cell_Line:Parental_Cell_Line" | relative_url }}">parental</a> and <a href="{{ "/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line" | relative_url }}">reporter</a> lines are available by request to the research community.</p>
 
 <p class="note">We are now able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00. The recipient will be responsible for shipping costs. This requires membership in <a href="https://pcen.wustl.edu/" target="_blank">WU-PCEN</a> (see below for details).</p>
 
-<p>Through integrated efforts of several entities, human iPSC <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line">parental</a> and <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line">reporter</a> lines are available to the research community. These tools are designed to enable studies to optimize current or new protocols toward target kidney lineages, adapt differentiation efforts to additional contexts (e.g. bioprinting or scaffold seeding), or monitor the maintenance of cell identity under different culture conditions. The reporter iPSC lines are designed to mark specific kidney cell populations upon differentiation into organoids with various fluorescent proteins. Some versions include cell specific Cre recombinase expression for cell lineage tracing.  Applications also include engineering replacement kidneys and preclinical model system research.</p>
+<p>Through integrated efforts of several entities, human iPSC <a href="{{ "/chaise/recordset/#2/Cell_Line:Parental_Cell_Line" | relative_url }}">parental</a> and <a href="{{ "/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line" | relative_url }}">reporter</a> lines are available to the research community. These tools are designed to enable studies to optimize current or new protocols toward target kidney lineages, adapt differentiation efforts to additional contexts (e.g. bioprinting or scaffold seeding), or monitor the maintenance of cell identity under different culture conditions. The reporter iPSC lines are designed to mark specific kidney cell populations upon differentiation into organoids with various fluorescent proteins. Some versions include cell specific Cre recombinase expression for cell lineage tracing.  Applications also include engineering replacement kidneys and preclinical model system research.</p>
 
 <h2>Costs</h2>
 
@@ -34,8 +34,8 @@ title: Request iPSC Cell Lines
 <p>The process for requesting a cell line is as follows:</p>
 
 <ol>
-  <li>Look through our available cell lines: <a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line?pcid=static">Browse Reporter Lines</a> | <a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static">Browse Parental Lines</a></li>
-  <li>For a cell line you would like to request, click the <strong><em>Request this cell line</em></strong> link on the cell line records or <strong><a href="/resources/cell-lines/request-cell-lines/">go directly to the form here</a></strong> and choose the cell line.</li>
+  <li>Look through our available cell lines: <a href="{{ "/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line?pcid=static" | relative_url }}">Browse Reporter Lines</a> | <a href="{{ "/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static" | relative_url }}">Browse Parental Lines</a></li>
+  <li>For a cell line you would like to request, click the <strong><em>Request this cell line</em></strong> link on the cell line records or <strong><a href="{{ "/resources/cell-lines/request-cell-lines/" | relative_url }}">go directly to the form here</a></strong> and choose the cell line.</li>
   <li>You will receive an email with the contact information for the cell line provider.</li>
   <li>The KTRC will send you an initial email with instructions on completing and submitting all approval documentation and how to obtain the Materials Transfer Agreement (MTA) for the requested cell line.</li>
   <li>After all forms have been returned and approved, and a fully executed MTA has been emailed to the KTRC, shipping arrangements will be agreed upon and scheduled. <strong>The requester is responsible for all shipping costs.</strong></li>
