--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -9,7 +9,7 @@ description: Describes the terms under which users may re-use data from ATLAS-D2
         <ol>
           <li><p><strong>Copyright to data and images on the ATLAS-D2K site is held by the individual contributing investigators.</strong> The Principal Investigator is listed on every data record page. Click the name in the Principal Investigator field to go to a page which will list the name and institution of the investigator.</p>
           <p><strong>Acknowledge the Investigator and Consortium that generated the data and relevant publications from investigators in any of your work resulting from the use of data in the ATLAS-D2K repository.</strong> You can find citation information by clicking on the “Share and cite” button that is available on every data record. Also acknowledge that you obtained the dataset from the ATLAS-D2K repository.</p>
-          <p>Full information on citing ATLAS-D2K data and the ATLAS-D2K site is available at: <a href="/citing/">https://www.atlas-d2k.org/citing/</a>.</p></li>
+          <p>Full information on citing ATLAS-D2K data and the ATLAS-D2K site is available at: <a href="{{ "/citing/" | relative_url }}">https://www.atlas-d2k.org/citing/</a>.</p></li>
           <li><p><strong>We suggest that you not circulate the original data you downloaded to other potential users; instead, refer them to the ATLAS-D2K website.</strong></p>
             <p>The datasets may be periodically updated, expanded or corrected so it makes the most sense for new users to obtain the latest version directly from ATLAS-D2K. Doing so also helps us collect the usage data needed to demonstrate that the community is taking advantage of ATLAS-D2K.</p>
           </li>
