--- a/tutorials/urogenital-dev/index.html
+++ b/tutorials/urogenital-dev/index.html
@@ -7,10 +7,10 @@ description: Extensive tutorial that describes the development of the urogenital
 
 <div class="tutorial-gallery">
   <a href="#ugt-reproductive">
-    <img src="/assets/img/tutorials/UGTDevelopment_UrinarySystem-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/UGTDevelopment_UrinarySystem-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
   <a href="#ugt-urinary">
-    <img src="/assets/img/tutorials/UGTDevelopment_Reproductive-thumb.jpg" alt="..." class="img-thumbnail">
+    <img src="{{ "/assets/img/tutorials/UGTDevelopment_Reproductive-thumb.jpg" | relative_url }}" alt="..." class="img-thumbnail">
   </a>
 </div>
 
@@ -33,8 +33,8 @@ description: Extensive tutorial that describes the development of the urogenital
 <a name="ugt-reproductive"></a>
 <div class="well">
   <figure>
-    <a href="/assets/img/tutorials/UGTDevelopment_Reproductive.jpg" class="colorbox">
-    <img src="/assets/img/tutorials/UGTDevelopment_Reproductive.jpg" alt="The developing urogenital system." class="img-responsive"/></a>
+    <a href="{{ "/assets/img/tutorials/UGTDevelopment_Reproductive.jpg" | relative_url }}" class="colorbox">
+    <img src="{{ "/assets/img/tutorials/UGTDevelopment_Reproductive.jpg" | relative_url }}" alt="The developing urogenital system." class="img-responsive"/></a>
     <figcaption><strong>The developing urogenital system.</strong><br/>
       <span class="expanded-caption">From left to right, 3-dimensional schematic diagrams show the urogenital system at TS17 (10.5 dpc), TS19 (11.5 dpc), TS21 (13 dpc) and TS23 (15 dpc). Ventral views of male (top row) and female (bottom row) systems are shown. The anatomy of the gonads (blue) is identical at TS17 and 19, becoming an obvious testis and ovary, seen at TS21 and TS23. Primordial germ cells, in the early gonad, and germ cells (white spheres) are part of the ovary and testis. AT TS21, male germ cells are located within the primary sex cords, giving the testes their striped appearance. A mesonephros lies adjacent to each gonad and can be seen at all four stages, in both males and females. Within the mesonephroi (purple-grey) are the nephric ducts and their derivatives (orange), the paramesonephric ducts (blue) and the mesonephric tubules (grey). The urinary system can be divided into the upper and lower systems. The lower urinary system is primarily derived from the cloaca (dark purple at TS17). The cloaca gives rise to the urogenital sinus (dark purple at TS19), which gives rise to the bladder and pelvic urethra (dark purple at TS21 and 23). The phallic urethra and external genitalia are not shown. The upper urinary system is comprised of the metanephroi or kidneys. Each metanephros (kidney) develops from the metanephric mesenchyme (purple at T17), located adjacent to the posterior end of the nephric duct. Here, the ureteric bud grows out from this portion of the nephric duct, just after TS17, and T-shaped ureteric buds can be seen within the metanephric mesenchyme at TS19. The ureteric bud continues to branch developing into the ureteric tree seen at TS21 and TS23. Only the ureteric tips are shown on the surface of the kidneys at these later stages. The metanephric mesenchyme condenses around the ureteric tips, forming the cap mesenchyme (darker purple in TS21 and TS23 kidneys). Cells of the cap mesenchyme give rise to the nephrons of the kidney (not shown in the diagrams). The ureters, part of the lower urinary system, develop from the stalks of the ureteric buds. Remodelling of the posterior nephric duct (called the common nephric duct) occurs between TS19 and TS21, eventually resulting in a direction connection between the ureters and the bladder and completing the connection between the upper and lower urinary systems.</span></figcaption>
   </figure>
@@ -42,8 +42,8 @@ description: Extensive tutorial that describes the development of the urogenital
 <a name="ugt-urinary"></a>
 <div class="well">
   <figure>
-    <a href="/assets/img/tutorials/UGTDevelopment_UrinarySystem.jpg" class="colorbox">
-    <img src="/assets/img/tutorials/UGTDevelopment_UrinarySystem.jpg" alt="The developing urogenital system – dorsal views" class="img-responsive"/></a>
+    <a href="{{ "/assets/img/tutorials/UGTDevelopment_UrinarySystem.jpg" | relative_url }}" class="colorbox">
+    <img src="{{ "/assets/img/tutorials/UGTDevelopment_UrinarySystem.jpg" | relative_url }}" alt="The developing urogenital system – dorsal views" class="img-responsive"/></a>
     <figcaption><strong>The developing urogenital system – dorsal views.</strong><br/>
       <span class="expanded-caption">From left to right, 3-dimensional schematic diagrams show the male urogenital system at TS17 (10.5 dpc), TS19 (11.5 dpc), TS21 (13 dpc) and TS23 (15 dpc). Dorsal views of the urogenital system, show the kidneys and the dorsal sides of the mesonephroi. The mesonephric tubules are more visible from the dorsal side. The lower urinary system, shown in dark purple, shows the dorsal side of the cloaca (at TS17), urogenital sinus (at TS19) and the dorsal side of the pelvic urethra (TS21 and TS23). The bladder is not seen in dorsal views of the urogenital system. The pelvic ganglia (white spheres) can be seen on this side of the anterior pelvic urethra. The phallic urethra and external genitalia are not shown.</span>
     </figcaption>
